--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.2",
+        "@fortawesome/free-solid-svg-icons": "^6.4.2",
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "4.1.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.1.4",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
+        "sass": "1.64.2",
         "sass-loader": "7.*",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome": "^1.1.8",
+        "@fortawesome/fontawesome-free-solid": "^5.0.13"
     }
 }
