--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "sass": "1.64.2",
         "sass-loader": "7.*",
         "vue": "^2.5.17",
+        "vue-izitoast": "^1.2.1",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
