--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "1.64.2",
+        "sass": "1.32.*",
         "sass-loader": "7.*",
         "vue": "^2.5.17",
         "vue-izitoast": "^1.2.1",
