--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^6.4.2",
         "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "autosize": "^6.0.1",
         "axios": "^0.19",
         "bootstrap": "4.1.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.1.4",
         "lodash": "^4.17.13",
+        "markdown-it": "^13.0.2",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "1.32.*",
