--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "laravel-mix": "^4.1.4",
         "lodash": "^4.17.13",
         "markdown-it": "^13.0.2",
+        "markdown-it-prism": "^2.3.0",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "1.32.*",
