--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/helpers": "^1.6",
+        "laravel/passport": "^9.4",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.1",
         "mews/purifier": "^3.4"
