--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@fortawesome/fontawesome": "^1.1.8",
         "@fortawesome/fontawesome-free-solid": "^5.0.13",
         "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "autosize": "^6.0.1",
         "axios": "^0.19",
         "bootstrap": "4.1.1",
