--- a/composer.json
+++ b/composer.json
@@ -8,24 +8,26 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
-        "doctrine/dbal": "2.6.3",
+        "php": "^7.2.5|^8.0",
         "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.2",
+        "laravel/framework": "^7.29",
         "laravel/helpers": "^1.6",
         "laravel/passport": "^9.4",
-        "laravel/tinker": "^1.0",
-        "laravel/ui": "^1.1",
-        "mews/purifier": "^3.4"
+        "laravel/tinker": "^2.5",
+        "laravel/ui": "^2",
+        "mews/purifier": "^3.4",
+        "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^6.3.1|^7.0.1"
+
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
-        "facade/ignition": "^1.4",
+        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.3",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
