--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,14 @@
 .env
 .env.backup
 .phpunit.result.cache
+docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+/.idea
+/.vscode
+*.sqlite*
 =======
 /vendor/
 node_modules/
