--- a/composer.json
+++ b/composer.json
@@ -8,26 +8,27 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5|^8.0",
+        "php": "^7.3|^8.0",
         "erusev/parsedown": "^1.7",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^7.29",
-        "laravel/helpers": "^1.6",
-        "laravel/passport": "^9.4",
-        "laravel/tinker": "^2.5",
-        "laravel/ui": "^2",
-        "mews/purifier": "^3.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.3.1|^7.0.1"
-
+        "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/framework": "^8.75",
+        "laravel/helpers": "^1.6",
+        "laravel/legacy-factories": "^1.3",
+        "laravel/passport": "^v10.4.2",
+        "laravel/tinker": "^2.5",
+        "laravel/ui": "^3",
+        "laravel/sanctum": "^2.11",
+        "mews/purifier": "^3.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
-        "facade/ignition": "^2.0",
-        "fzaninotto/faker": "^1.5",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.3",
-        "phpunit/phpunit": "^8.5"
+        "facade/ignition": "^2.5",
+        "fzaninotto/faker": "^1.9.1",
+        "phpunit/phpunit": "^9.5.10",
+        "nunomaduro/collision": "^5.10",
+        "mockery/mockery": "^1.4.4",
+        "laravel/sail": "^1.0.1"
     },
     "config": {
         "optimize-autoloader": true,
