--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "doctrine/dbal": "^3.7",
         "erusev/parsedown": "^1.7",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -16,9 +17,9 @@
         "laravel/helpers": "^1.6",
         "laravel/legacy-factories": "^1.3",
         "laravel/passport": "^v10.4.2",
+        "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3",
-        "laravel/sanctum": "^2.11",
         "mews/purifier": "^3.4"
     },
     "require-dev": {
